<resources>
    <string name="app_name">CalorieGuide</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_register">empty</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="logout">Logout</string>
    <string name="user_info">User Info</string>
    <string name="age">Age</string>
    <string name="getInfoText">Please provide more information, so we can help you better:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="sex">Sex:</string>
    <string name="height_centimeters">Height (centimeters)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="finish">Finish</string>
    <string name="how_active_are_you">How active are you?</string>
    <string name="little_to_no_exercise">Little to no exercise</string>
    <string name="light_exercise_or_sports_1_3_days_a_week">Light exercise or sports 1-3 days a week</string>
    <string name="athlete_or_active_worker_very_hard_exercise_physical_job_or_training_twice_a_day">Athlete or Active Worker (very hard exercise, physical job, or training twice a day):</string>
    <string name="fitness_enthusiast_hard_exercise_or_sports_6_7_days_a_week">Fitness Enthusiast (hard exercise or sports 6-7 days a week)</string>
    <string name="regular_exerciser_moderate_exercise_or_sports_3_5_days_a_week">Regular Exerciser (moderate exercise or sports 3-5 days a week)</string>
    <string name="casual_exerciser_light_exercise_or_sports_1_3_days_a_week">Casual Exerciser (light exercise or sports 1-3 days a week)</string>
    <string name="couch_potato_little_to_no_exercise">Couch Potato (little to no exercise)</string>
    <string name="home">Home</string>
    <string name="calorie_intake">Calorie Intake</string>
    <string name="weight">Weight</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="add_food">Add Food</string>
    <string name="log">Log</string>
    <string name="what_is_your_goal">What is your goal?</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="what_is_your_weight_goal">What is your weight goal?</string>
    <string name="what_is_your_target_weight_loss">What is your target weight loss?</string>
    <string name="what_is_your_target_weight_loss_per_week">What is your target weight loss per week?</string>
    <string name="_0_25kg_per_week_n_6_5kg_in_6_months">- 0.25kg per week\n(6.5kg in 6 months)</string>
    <string name="_0_5kg_per_week_n_13kg_in_6_months">- 0.5kg per week\n(13kg in 6 months)</string>
    <string name="_0_75kg_per_week_n_19_5kg_in_6_months">- 0.75kg per week\n(19.5kg in 6 months)</string>
    <string name="_1kg_per_week_n_26kg_in_6_months">- 1kg per week \n(26kg in 6 months)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="all_user_data_will_be_lost">All user data will be lost</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_account">Delete Account</string>
    <string name="go_back">Go Back</string>
    <string name="delete_user">Delete User</string>
    <string name="close_button">Close Button</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="add_weight">Add Weight</string>
    <string name="add_data">Add Data</string>
    <string name="update">Update</string>
    <string name="kg">KG</string>
    <string name="enter_your_weight">enter your weight</string>
    <string name="change_name">Change Name</string>
    <string name="change_height">Change Height</string>
    <string name="change_age">Change Age</string>
    <string name="your_current_bmi">Your current BMI:</string>
    <string name="your_body_mass_weight_bmi_is">Your Body Mass Index (BMI) is</string>
    <string name="your_approximate_bmr">Your approximate BMR:</string>
    <string name="bmr_description">If you consume less calories than your Basal Metabolic Rate (BMR) combined with your activity level per day, you will lose weight. If you consume more calories than that, you will gain weight instead.</string>
    <string name="category">Category:</string>
    <string name="what_did_you_eat_today">What did you eat today?</string>
    <string name="info">Info</string>
    <string name="label">Label</string>
    <string name="add_food_to_today_s_intake">add food to today\'s intake</string>
    <string name="add">Add</string>
    <string name="food_name">Food Name</string>
    <string name="quantity">Quantity</string>
    <string name="food_details">Food Details</string>
    <string name="quantity_">Quantity:</string>
    <string name="_1">1</string>
    <string name="per">Per</string>
    <string name="calories_eaten">Calories Eaten:</string>
    <string name="limit">Limit:</string>
    <string name="available">Available</string>
    <string name="eaten">Eaten:</string>
    <string name="enter_your_new_age">Enter your new age</string>
    <string name="new_age">New Age</string>
    <string name="update_btn">Update</string>
    <string name="new_age_hint">new age</string>
    <string name="enter_your_new_height">Enter your new height</string>
    <string name="new_height">new height</string>
    <string name="new_height_cm">new height (cm)</string>


</resources>