<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_corners_menu">


    <item
        android:id="@+id/caloriePage"
        android:title="@string/calorie_intake"
        android:icon="@drawable/baseline_food_bank_24"
        android:background="@drawable/rounded_corners_menu"/>

    <item
        android:id="@+id/dashboardPage"
        android:title="@string/dashboard"
        android:icon="@drawable/baseline_space_dashboard_24"
        android:background="@drawable/rounded_corners_menu"/>

    <item
        android:id="@+id/weightPage"
        android:title="@string/weight"
        android:icon="@drawable/baseline_inbox_24"
        android:background="@drawable/rounded_corners_menu"
        />

    <item
        android:id="@+id/settingsPage"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        android:background="@drawable/rounded_corners_menu"
        />

</menu>