<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingsFragment"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/settings_txtUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        />

    <RelativeLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_txtUserInfo"
        android:layout_marginBottom="15dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_changeUserName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/change_name"
            android:layout_centerHorizontal="true"
            app:backgroundTint="@color/dark"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="0dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ChangeUserAge"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/change_age"
            android:layout_centerHorizontal="true"
            app:backgroundTint="@color/dark"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="0dp"
            android:layout_below="@id/btn_changeUserName"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ChangeUserHeight"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/change_height"
            android:layout_centerHorizontal="true"
            app:backgroundTint="@color/dark"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="0dp"
            android:layout_below="@id/btn_ChangeUserAge"
            />

    </RelativeLayout>

    <!-- Change Password button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_changePassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/change_password"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/dark"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        android:layout_below="@id/profileLayout"
        />

    <!-- LogOut button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:layout_below="@+id/btn_changePassword"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/dark"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="-5dp"
        />

    <!-- Delete User button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_deleteUser"
        android:layout_below="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/delete_user"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/dark"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        />

    <!-- Black Overlay -->
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        />
    </RelativeLayout>