<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:padding="15dp"
    >

    <ImageButton
        android:id="@+id/close_DeleteDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/baseline_close_24"
        android:contentDescription="@string/close_button"
        android:background="@android:color/transparent"
        android:padding="15dp"
        />

    <TextView
        android:id="@+id/txtDeleteUserQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/close_DeleteDialog"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/txtDeleteUserQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_user_data_will_be_lost"
        android:textColor="@color/light_gray"
        android:textSize="19sp"
        android:layout_below="@+id/txtDeleteUserQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-light"    />

    <GridLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDeleteUserQuestion2"
        android:rowCount="1"
        android:columnCount="2"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_declineDeleteAccount"
            android:layout_width="140dp"
            android:layout_height="67dp"
            android:text="@string/go_back"
            app:backgroundTint="@color/dark"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_AgreeDeleteAccount"
            android:layout_width="140dp"
            android:layout_height="67dp"
            android:text="@string/next"
            app:backgroundTint="@color/accent"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            />

    </GridLayout>
</RelativeLayout>