<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GetAdditionalInfo"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    >

    <TextView
        android:id="@+id/getInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getInfoText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-light"
        android:layout_above="@id/sex_text"/>

    <TextView
        android:id="@+id/sex_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-light"
        android:layout_above="@id/sexRadioGroup"
        />

    <RadioGroup
        android:id="@+id/sexRadioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/age_text_input"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

    <RadioButton
        android:id="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/male"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:buttonTint="@color/accent"
        android:textSize="16sp"/>
    <RadioButton
        android:id="@+id/radio_button_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/female"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:textSize="16sp"
        android:buttonTint="@color/accent"/>
    </RadioGroup>

    <!-- Age Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_text_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/age">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Height Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_text_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/age_text_input"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/height_centimeters"
        app:errorEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Weight Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_text_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/height_text_input"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/weight_kg"
        app:errorEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bth_getInfoNext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/accent"
        />

    <!-- Button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bth_getInfoNext"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/next"
        android:layout_below="@+id/weight_text_input"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/accent"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        />


</RelativeLayout>