<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:padding="15dp"
    >

    <ImageButton
        android:id="@+id/close_dialog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/baseline_close_24"
        android:contentDescription="@string/close_button"
        android:background="@android:color/transparent"
        android:padding="15dp"
        />

    <TextView
        android:id="@+id/txtEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_new_height"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/close_dialog_btn"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/input_height"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_width="270dp"
        android:layout_centerHorizontal="true"
        android:layout_height="40dp"
        android:layout_below="@+id/txtEnterPassword"
        android:background="@color/white"
        android:hint="@string/new_height_cm"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_height"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/update_btn"
        android:layout_below="@id/input_height"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/accent"
        android:layout_marginVertical="12dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        />

</RelativeLayout>